WebKit/mac/WebCoreSupport/WebChromeClient.h
@@ -105,6 +105,7 @@ public:
     virtual void setStatusbarText(const WebCore::String&);
 
     virtual void scrollbarsModeDidChange() const { }
+    virtual void missingPluginButtonClicked(WebCore::Element*) const;
     virtual void mouseDidMoveOverElement(const WebCore::HitTestResult&, unsigned modifierFlags);
 
     virtual void setToolTip(const WebCore::String&, WebCore::TextDirection);
