WebKit/win/WebCoreSupport/WebChromeClient.cpp
@@ -28,6 +28,7 @@
 
 #include "COMPropertyBag.h"
 #include "COMVariantSetter.h"
+#include "DOMCoreClasses.h"
 #include "WebElementPropertyBag.h"
 #include "WebFrame.h"
 #include "WebGeolocationPolicyListener.h"
@@ -532,6 +533,20 @@ void WebChromeClient::mouseDidMoveOverElement(const HitTestResult& result, unsig
     element.adoptRef(WebElementPropertyBag::createInstance(result));
 
     uiDelegate->mouseDidMoveOverElement(m_webView, element.get(), modifierFlags);
+}
+
+void WebChromeClient::missingPluginButtonClicked(Element* element) const
+{
+    COMPtr<IWebUIDelegate> uiDelegate;
+    if (FAILED(m_webView->uiDelegate(&uiDelegate)))
+        return;
+
+    COMPtr<IWebUIDelegatePrivate3> uiDelegatePrivate3(Query, uiDelegate);
+    if (!uiDelegatePrivate3)
+        return;
+
+    COMPtr<IDOMElement> e(AdoptCOM, DOMElement::createInstance(element));
+    uiDelegatePrivate3->didPressMissingPluginButton(e.get());
 }
 
 void WebChromeClient::setToolTip(const String& toolTip, TextDirection)
