third_party/WebKit/WebCore/rendering/RenderEmbeddedObject.h
@@ -38,6 +38,7 @@ public:
     void updateWidget(bool onlyCreateNonNetscapePlugins);
     void setShowsMissingPluginIndicator();
     void setShowsCrashedPluginIndicator();
+    bool showsMissingPluginIndicator() const { return m_showsMissingPluginIndicator; }
 
     bool hasFallbackContent() const { return m_hasFallbackContent; }
 
@@ -61,6 +62,7 @@ private:
 
     String m_replacementText;
     bool m_hasFallbackContent;
+    bool m_showsMissingPluginIndicator;
 };
 
 inline RenderEmbeddedObject* toRenderEmbeddedObject(RenderObject* object)
